--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,9 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Electronic Design Automation (Eda)",
 ]
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "questionary>=2.0.0",
+]
 
 [project.optional-dependencies]
 dev = [
