--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "rf-filter-calculator"
 version = "1.0.0"
-description = "Command-line tool for calculating LC filter component values"
+description = "Command-line tool for calculating LC filter component values for RF engineers and amateur radio operators"
 readme = "README.md"
 license = {text = "GPL-3.0"}
 authors = [
     {name = "Matt N3AR"}
 ]
-keywords = ["rf", "filter", "calculator", "lowpass", "highpass", "bandpass", "electronics", "ham-radio"]
+keywords = ["rf", "filter", "calculator", "lowpass", "highpass", "bandpass", "electronics", "ham-radio", "butterworth", "chebyshev", "bessel", "lc-filter", "coupled-resonator"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Console",
@@ -25,6 +25,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering :: Electronic Design Automation (Eda)",
+    "Topic :: Communications :: Ham Radio",
 ]
 requires-python = ">=3.10"
 dependencies = [
